welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:18: error: Unmatched closing brace '}' ignored here
 }
 ^